Turtle/TURTLEParser.cpp

// Generated from ./TURTLE.g4 by ANTLR 4.7.2


#include "TURTLEListener.h"
#include "TURTLEVisitor.h"

#include "TURTLEParser.h"


using namespace antlrcpp;
using namespace antlr4;

TURTLEParser::TURTLEParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

TURTLEParser::~TURTLEParser() {
  delete _interpreter;
}

std::string TURTLEParser::getGrammarFileName() const {
  return "TURTLE.g4";
}

const std::vector<std::string>& TURTLEParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& TURTLEParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- TurtleDocContext ------------------------------------------------------------------

TURTLEParser::TurtleDocContext::TurtleDocContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TURTLEParser::TurtleDocContext::EOF() {
  return getToken(TURTLEParser::EOF, 0);
}

std::vector<TURTLEParser::StatementContext *> TURTLEParser::TurtleDocContext::statement() {
  return getRuleContexts<TURTLEParser::StatementContext>();
}

TURTLEParser::StatementContext* TURTLEParser::TurtleDocContext::statement(size_t i) {
  return getRuleContext<TURTLEParser::StatementContext>(i);
}


size_t TURTLEParser::TurtleDocContext::getRuleIndex() const {
  return TURTLEParser::RuleTurtleDoc;
}

void TURTLEParser::TurtleDocContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTurtleDoc(this);
}

void TURTLEParser::TurtleDocContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTurtleDoc(this);
}


antlrcpp::Any TURTLEParser::TurtleDocContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TURTLEVisitor*>(visitor))
    return parserVisitor->visitTurtleDoc(this);
  else
    return visitor->visitChildren(this);
}

TURTLEParser::TurtleDocContext* TURTLEParser::turtleDoc() {
  TurtleDocContext *_localctx = _tracker.createInstance<TurtleDocContext>(_ctx, getState());
  enterRule(_localctx, 0, TURTLEParser::RuleTurtleDoc);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(41);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << TURTLEParser::T__1)
      | (1ULL << TURTLEParser::T__2)
      | (1ULL << TURTLEParser::T__6)
      | (1ULL << TURTLEParser::T__8)
      | (1ULL << TURTLEParser::BASE)
      | (1ULL << TURTLEParser::PREFIX)
      | (1ULL << TURTLEParser::BlankNode)
      | (1ULL << TURTLEParser::IRIREF)
      | (1ULL << TURTLEParser::PrefixedName))) != 0)) {
      setState(38);
      statement();
      setState(43);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(44);
    match(TURTLEParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

TURTLEParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TURTLEParser::DirectiveContext* TURTLEParser::StatementContext::directive() {
  return getRuleContext<TURTLEParser::DirectiveContext>(0);
}

TURTLEParser::TriplesContext* TURTLEParser::StatementContext::triples() {
  return getRuleContext<TURTLEParser::TriplesContext>(0);
}


size_t TURTLEParser::StatementContext::getRuleIndex() const {
  return TURTLEParser::RuleStatement;
}

void TURTLEParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void TURTLEParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


antlrcpp::Any TURTLEParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TURTLEVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

TURTLEParser::StatementContext* TURTLEParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, TURTLEParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(50);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TURTLEParser::T__1:
      case TURTLEParser::T__2:
      case TURTLEParser::BASE:
      case TURTLEParser::PREFIX: {
        enterOuterAlt(_localctx, 1);
        setState(46);
        directive();
        break;
      }

      case TURTLEParser::T__6:
      case TURTLEParser::T__8:
      case TURTLEParser::BlankNode:
      case TURTLEParser::IRIREF:
      case TURTLEParser::PrefixedName: {
        enterOuterAlt(_localctx, 2);
        setState(47);
        triples();
        setState(48);
        match(TURTLEParser::T__0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DirectiveContext ------------------------------------------------------------------

TURTLEParser::DirectiveContext::DirectiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TURTLEParser::PrefixIDContext* TURTLEParser::DirectiveContext::prefixID() {
  return getRuleContext<TURTLEParser::PrefixIDContext>(0);
}

TURTLEParser::BaseContext* TURTLEParser::DirectiveContext::base() {
  return getRuleContext<TURTLEParser::BaseContext>(0);
}

TURTLEParser::SparqlPrefixContext* TURTLEParser::DirectiveContext::sparqlPrefix() {
  return getRuleContext<TURTLEParser::SparqlPrefixContext>(0);
}

TURTLEParser::SparqlBaseContext* TURTLEParser::DirectiveContext::sparqlBase() {
  return getRuleContext<TURTLEParser::SparqlBaseContext>(0);
}


size_t TURTLEParser::DirectiveContext::getRuleIndex() const {
  return TURTLEParser::RuleDirective;
}

void TURTLEParser::DirectiveContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDirective(this);
}

void TURTLEParser::DirectiveContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDirective(this);
}


antlrcpp::Any TURTLEParser::DirectiveContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TURTLEVisitor*>(visitor))
    return parserVisitor->visitDirective(this);
  else
    return visitor->visitChildren(this);
}

TURTLEParser::DirectiveContext* TURTLEParser::directive() {
  DirectiveContext *_localctx = _tracker.createInstance<DirectiveContext>(_ctx, getState());
  enterRule(_localctx, 4, TURTLEParser::RuleDirective);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(56);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TURTLEParser::T__1: {
        enterOuterAlt(_localctx, 1);
        setState(52);
        prefixID();
        break;
      }

      case TURTLEParser::T__2: {
        enterOuterAlt(_localctx, 2);
        setState(53);
        base();
        break;
      }

      case TURTLEParser::PREFIX: {
        enterOuterAlt(_localctx, 3);
        setState(54);
        sparqlPrefix();
        break;
      }

      case TURTLEParser::BASE: {
        enterOuterAlt(_localctx, 4);
        setState(55);
        sparqlBase();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrefixIDContext ------------------------------------------------------------------

TURTLEParser::PrefixIDContext::PrefixIDContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TURTLEParser::PrefixIDContext::PNAME_NS() {
  return getToken(TURTLEParser::PNAME_NS, 0);
}

tree::TerminalNode* TURTLEParser::PrefixIDContext::IRIREF() {
  return getToken(TURTLEParser::IRIREF, 0);
}


size_t TURTLEParser::PrefixIDContext::getRuleIndex() const {
  return TURTLEParser::RulePrefixID;
}

void TURTLEParser::PrefixIDContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrefixID(this);
}

void TURTLEParser::PrefixIDContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrefixID(this);
}


antlrcpp::Any TURTLEParser::PrefixIDContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TURTLEVisitor*>(visitor))
    return parserVisitor->visitPrefixID(this);
  else
    return visitor->visitChildren(this);
}

TURTLEParser::PrefixIDContext* TURTLEParser::prefixID() {
  PrefixIDContext *_localctx = _tracker.createInstance<PrefixIDContext>(_ctx, getState());
  enterRule(_localctx, 6, TURTLEParser::RulePrefixID);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    match(TURTLEParser::T__1);
    setState(59);
    match(TURTLEParser::PNAME_NS);
    setState(60);
    match(TURTLEParser::IRIREF);
    setState(61);
    match(TURTLEParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BaseContext ------------------------------------------------------------------

TURTLEParser::BaseContext::BaseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TURTLEParser::BaseContext::IRIREF() {
  return getToken(TURTLEParser::IRIREF, 0);
}


size_t TURTLEParser::BaseContext::getRuleIndex() const {
  return TURTLEParser::RuleBase;
}

void TURTLEParser::BaseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBase(this);
}

void TURTLEParser::BaseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBase(this);
}


antlrcpp::Any TURTLEParser::BaseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TURTLEVisitor*>(visitor))
    return parserVisitor->visitBase(this);
  else
    return visitor->visitChildren(this);
}

TURTLEParser::BaseContext* TURTLEParser::base() {
  BaseContext *_localctx = _tracker.createInstance<BaseContext>(_ctx, getState());
  enterRule(_localctx, 8, TURTLEParser::RuleBase);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    match(TURTLEParser::T__2);
    setState(64);
    match(TURTLEParser::IRIREF);
    setState(65);
    match(TURTLEParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SparqlBaseContext ------------------------------------------------------------------

TURTLEParser::SparqlBaseContext::SparqlBaseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TURTLEParser::SparqlBaseContext::BASE() {
  return getToken(TURTLEParser::BASE, 0);
}

tree::TerminalNode* TURTLEParser::SparqlBaseContext::IRIREF() {
  return getToken(TURTLEParser::IRIREF, 0);
}


size_t TURTLEParser::SparqlBaseContext::getRuleIndex() const {
  return TURTLEParser::RuleSparqlBase;
}

void TURTLEParser::SparqlBaseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSparqlBase(this);
}

void TURTLEParser::SparqlBaseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSparqlBase(this);
}


antlrcpp::Any TURTLEParser::SparqlBaseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TURTLEVisitor*>(visitor))
    return parserVisitor->visitSparqlBase(this);
  else
    return visitor->visitChildren(this);
}

TURTLEParser::SparqlBaseContext* TURTLEParser::sparqlBase() {
  SparqlBaseContext *_localctx = _tracker.createInstance<SparqlBaseContext>(_ctx, getState());
  enterRule(_localctx, 10, TURTLEParser::RuleSparqlBase);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    match(TURTLEParser::BASE);
    setState(68);
    match(TURTLEParser::IRIREF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SparqlPrefixContext ------------------------------------------------------------------

TURTLEParser::SparqlPrefixContext::SparqlPrefixContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TURTLEParser::SparqlPrefixContext::PREFIX() {
  return getToken(TURTLEParser::PREFIX, 0);
}

tree::TerminalNode* TURTLEParser::SparqlPrefixContext::PNAME_NS() {
  return getToken(TURTLEParser::PNAME_NS, 0);
}

tree::TerminalNode* TURTLEParser::SparqlPrefixContext::IRIREF() {
  return getToken(TURTLEParser::IRIREF, 0);
}


size_t TURTLEParser::SparqlPrefixContext::getRuleIndex() const {
  return TURTLEParser::RuleSparqlPrefix;
}

void TURTLEParser::SparqlPrefixContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSparqlPrefix(this);
}

void TURTLEParser::SparqlPrefixContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSparqlPrefix(this);
}


antlrcpp::Any TURTLEParser::SparqlPrefixContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TURTLEVisitor*>(visitor))
    return parserVisitor->visitSparqlPrefix(this);
  else
    return visitor->visitChildren(this);
}

TURTLEParser::SparqlPrefixContext* TURTLEParser::sparqlPrefix() {
  SparqlPrefixContext *_localctx = _tracker.createInstance<SparqlPrefixContext>(_ctx, getState());
  enterRule(_localctx, 12, TURTLEParser::RuleSparqlPrefix);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    match(TURTLEParser::PREFIX);
    setState(71);
    match(TURTLEParser::PNAME_NS);
    setState(72);
    match(TURTLEParser::IRIREF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TriplesContext ------------------------------------------------------------------

TURTLEParser::TriplesContext::TriplesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TURTLEParser::SubjectContext* TURTLEParser::TriplesContext::subject() {
  return getRuleContext<TURTLEParser::SubjectContext>(0);
}

TURTLEParser::PredicateObjectListContext* TURTLEParser::TriplesContext::predicateObjectList() {
  return getRuleContext<TURTLEParser::PredicateObjectListContext>(0);
}

TURTLEParser::BlankNodePropertyListContext* TURTLEParser::TriplesContext::blankNodePropertyList() {
  return getRuleContext<TURTLEParser::BlankNodePropertyListContext>(0);
}


size_t TURTLEParser::TriplesContext::getRuleIndex() const {
  return TURTLEParser::RuleTriples;
}

void TURTLEParser::TriplesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTriples(this);
}

void TURTLEParser::TriplesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTriples(this);
}


antlrcpp::Any TURTLEParser::TriplesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TURTLEVisitor*>(visitor))
    return parserVisitor->visitTriples(this);
  else
    return visitor->visitChildren(this);
}

TURTLEParser::TriplesContext* TURTLEParser::triples() {
  TriplesContext *_localctx = _tracker.createInstance<TriplesContext>(_ctx, getState());
  enterRule(_localctx, 14, TURTLEParser::RuleTriples);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(81);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TURTLEParser::T__8:
      case TURTLEParser::BlankNode:
      case TURTLEParser::IRIREF:
      case TURTLEParser::PrefixedName: {
        enterOuterAlt(_localctx, 1);
        setState(74);
        subject();
        setState(75);
        predicateObjectList();
        break;
      }

      case TURTLEParser::T__6: {
        enterOuterAlt(_localctx, 2);
        setState(77);
        blankNodePropertyList();
        setState(79);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << TURTLEParser::T__5)
          | (1ULL << TURTLEParser::IRIREF)
          | (1ULL << TURTLEParser::PrefixedName))) != 0)) {
          setState(78);
          predicateObjectList();
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PredicateObjectListContext ------------------------------------------------------------------

TURTLEParser::PredicateObjectListContext::PredicateObjectListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TURTLEParser::VerbContext *> TURTLEParser::PredicateObjectListContext::verb() {
  return getRuleContexts<TURTLEParser::VerbContext>();
}

TURTLEParser::VerbContext* TURTLEParser::PredicateObjectListContext::verb(size_t i) {
  return getRuleContext<TURTLEParser::VerbContext>(i);
}

std::vector<TURTLEParser::ObjectListContext *> TURTLEParser::PredicateObjectListContext::objectList() {
  return getRuleContexts<TURTLEParser::ObjectListContext>();
}

TURTLEParser::ObjectListContext* TURTLEParser::PredicateObjectListContext::objectList(size_t i) {
  return getRuleContext<TURTLEParser::ObjectListContext>(i);
}


size_t TURTLEParser::PredicateObjectListContext::getRuleIndex() const {
  return TURTLEParser::RulePredicateObjectList;
}

void TURTLEParser::PredicateObjectListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPredicateObjectList(this);
}

void TURTLEParser::PredicateObjectListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPredicateObjectList(this);
}


antlrcpp::Any TURTLEParser::PredicateObjectListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TURTLEVisitor*>(visitor))
    return parserVisitor->visitPredicateObjectList(this);
  else
    return visitor->visitChildren(this);
}

TURTLEParser::PredicateObjectListContext* TURTLEParser::predicateObjectList() {
  PredicateObjectListContext *_localctx = _tracker.createInstance<PredicateObjectListContext>(_ctx, getState());
  enterRule(_localctx, 16, TURTLEParser::RulePredicateObjectList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    verb();
    setState(84);
    objectList();
    setState(93);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TURTLEParser::T__3) {
      setState(85);
      match(TURTLEParser::T__3);
      setState(89);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << TURTLEParser::T__5)
        | (1ULL << TURTLEParser::IRIREF)
        | (1ULL << TURTLEParser::PrefixedName))) != 0)) {
        setState(86);
        verb();
        setState(87);
        objectList();
      }
      setState(95);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ObjectListContext ------------------------------------------------------------------

TURTLEParser::ObjectListContext::ObjectListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TURTLEParser::Object_Context *> TURTLEParser::ObjectListContext::object_() {
  return getRuleContexts<TURTLEParser::Object_Context>();
}

TURTLEParser::Object_Context* TURTLEParser::ObjectListContext::object_(size_t i) {
  return getRuleContext<TURTLEParser::Object_Context>(i);
}


size_t TURTLEParser::ObjectListContext::getRuleIndex() const {
  return TURTLEParser::RuleObjectList;
}

void TURTLEParser::ObjectListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterObjectList(this);
}

void TURTLEParser::ObjectListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitObjectList(this);
}


antlrcpp::Any TURTLEParser::ObjectListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TURTLEVisitor*>(visitor))
    return parserVisitor->visitObjectList(this);
  else
    return visitor->visitChildren(this);
}

TURTLEParser::ObjectListContext* TURTLEParser::objectList() {
  ObjectListContext *_localctx = _tracker.createInstance<ObjectListContext>(_ctx, getState());
  enterRule(_localctx, 18, TURTLEParser::RuleObjectList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    object_();
    setState(101);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TURTLEParser::T__4) {
      setState(97);
      match(TURTLEParser::T__4);
      setState(98);
      object_();
      setState(103);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VerbContext ------------------------------------------------------------------

TURTLEParser::VerbContext::VerbContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TURTLEParser::PredicateContext* TURTLEParser::VerbContext::predicate() {
  return getRuleContext<TURTLEParser::PredicateContext>(0);
}


size_t TURTLEParser::VerbContext::getRuleIndex() const {
  return TURTLEParser::RuleVerb;
}

void TURTLEParser::VerbContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVerb(this);
}

void TURTLEParser::VerbContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TURTLEListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVerb(this);
}


antlrcpp::Any TURTLEParser::VerbContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TURTLEVisitor*>(visitor))
    return parserVisitor->visitVerb(this);
  else
    return visitor->visitChildren(this);
}
